INICIO DE SESIÓN USUARIOS
Implementación del inicio de sesión para usuarios

--- a/ProyectoFinalCW/templates/RegistroUsu.html
+++ b/ProyectoFinalCW/templates/RegistroUsu.html
@@ -77,6 +77,20 @@
         </div>
       </form>
      </div>
+     <!--Footer-->
+     <footer class="page-footer #283593 indigo darken-3">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright">
+            <div class="container">
+            © 2017 Copyright Text
+            </div>
+          </div>
+        </footer>
      <!--Scripts-->
      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
      <script type="text/javascript" src="../resources/materialize/js/materialize.min.js"></script>
