--- a/ProyectoFinalCW/templates/SesionUsu.html
+++ b/ProyectoFinalCW/templates/SesionUsu.html
@@ -32,7 +32,7 @@
 		         </div>
              <div class="input-field col s6">
 		             <i class="material-icons prefix">vpn_key</i>
-		             <input id="Cont" type="password" required>
+		             <input id="Cont" type="password" maxlength="15" required>
 		             <label for="Cont">Contraseña</label>
 		         </div>
         </div>
