--- a/ProyectoFinalCW/templates/SesionUsu.html
+++ b/ProyectoFinalCW/templates/SesionUsu.html
@@ -11,7 +11,7 @@
      <!--Barra de navegación-->
      <nav>
        <div class="nav-wrapper center #283593 indigo darken-3">
-         <a href="PInicioUsu.html" class="brand-logo">Logo</a>
+         <a href="PInicioUsu.html" class="brand-logo center">Nombre</a>
        </div>
      </nav>
      <!--Parallax-->
@@ -19,7 +19,47 @@
        <div class="parallax"><img src="../resources/images/azul.png"></div>
        <br/><br/>
        <h2 class="center-align white-text"><strong>Inicio de Sesión</strong></h2>
-     </div>
+			 <center><div><svg width='300' height='300' xmlns='http://www.w3,org/2000/svg' version='1.1' fill='white'>
+				<defs>
+					<radialGradient id="rad1"
+						cx="50%" cy="50%" r="50%" fx="40%" fy="20%">
+						<stop offset="0" stop-color="gray"/>
+						<stop offset="1" stop-color="black"/>
+					</radialGradient>
+				</defs>
+				<defs>
+					<radialGradient id="rad2"
+						cx="20%" cy="30%" r="50%" fx="40%" fy="20%">
+						<stop offset="0" stop-color="tomato"/>
+						<stop offset="1" stop-color="crimson"/>
+					</radialGradient>
+				</defs>
+				<defs>
+					<radialGradient id="rad3"
+						cx="48%" cy="70%" r="60%" fx="40%" fy="20%">
+						<stop offset="0" stop-color="cyan"/>
+						<stop offset="1" stop-color="navy"/>
+					</radialGradient>
+				</defs>
+																
+				<rect width='100%' height='100%' stroke='black' fill='lightgray' rx="25%" ry="25%" />
+				<image  width='100%' height='125%' x='0' y='0' xlink:href='../resources/images/unam.png' />
+				<rect x='45%' y='30%' height='40%' width='11%' stroke='lightgray' fill='url(#rad1)' stroke-width='4%'/>
+				<polyline points='10%,70% 15%,95% 85%,95% 90%,70%' stroke='lightgray' fill='none' stroke-width='4%' />
+				<ellipse cx='50%' cy='70%' rx='42%' ry='17%' stroke='lightgray'  fill='lightgray'stroke-width='2%'/>	
+				<polyline points='10%,70% 15%,95% 85%,95% 90%,70%' stroke='black' fill='navy' stroke-width='2%' />
+																
+				<ellipse cx='50%' cy='70%' rx='40%' ry='15%' stroke='white' fill='url(#rad3)'  stroke-width='2%'/>	
+				<ellipse cx='50%' cy='70%' rx='40%' ry='15%' stroke='black' fill='none' stroke-width='2%' />				
+				<ellipse cx='50%' cy='70%' rx='25%' ry='9%' fill='url(#rad1)' stroke-width='2%' />
+											
+				<circle cx='50%' cy='16%' r='15%' stroke='lightgray' fill='none' stroke-width='3%' />
+				<circle cx='50%' cy='16%' r='15%' stroke='black' fill='url(#rad2)'/>		
+				<ellipse cx='43%' cy='10%' rx='3%' ry='5%' fill='white' stroke-width='2%' />			
+																
+				<rect x='45%' y='30%' height='47%' width='11%' stroke='black' fill='url(#rad1)' stroke-width='2%'/>			
+		</svg></div></center>
+	</div>
      <br/><br/><br/>
      <!--Formulario-->
      <div class="row">
