--- a/ProyectoFinalCW/templates/perfil.html
+++ b/ProyectoFinalCW/templates/perfil.html
@@ -55,9 +55,9 @@
          <ul id="nav-mobile" class="right hide-on-med-and-down">
            <li class="active"><i class="material-icons right">person_pin</i></li>
            <li class="active"><a id="usuario" href="perfil.html"></a></li>
-           <li><a href="badges.html">Juego<i class="material-icons right">games</i></a></li>
+           <li><a href="juego.html">Juego<i class="material-icons right">games</i></a></li>
            <li><a href="collapsible.html">Ranking<i class="material-icons right">grade</i></a></li>
-           <li><a id="cerrar" href="SesionUsu.html">Cerrar sesión<i class="material-icons right">input</i></a></li>
+           <li><a id="cerrar" href="cerrarUsu.html">Cerrar sesión<i class="material-icons right">input</i></a></li>
          </ul>
        </div>
      </nav>
