--- a/ProyectoFinalCW/templates/principalUsu.html
+++ b/ProyectoFinalCW/templates/principalUsu.html
@@ -54,9 +54,9 @@
          <ul id="nav-mobile" class="right hide-on-med-and-down">
            <li class="active"><i class="material-icons right">person_pin</i></li>
            <li class="active"><a id="usuario" href="perfil.html"></a></li>
-           <li><a href="badges.html">Juego<i class="material-icons right">games</i></a></li>
+           <li><a href="juego.html">Juego<i class="material-icons right">games</i></a></li>
            <li><a href="collapsible.html">Ranking<i class="material-icons right">grade</i></a></li>
-           <li><a id="cerrar" href="sesionUsu.html">Cerrar sesión<i class="material-icons right">input</i></a></li>
+           <li><a id="cerrar" href="cerrarUsu.html">Cerrar sesión<i class="material-icons right">input</i></a></li>
          </ul>
        </div>
      </nav>
@@ -65,7 +65,7 @@
        <div class="nav-wrapper #1565c0 blue darken-3">
          <form>
            <div class="input-field">
-             <input id="search" type="search" class="autocomplete" required>
+             <input id="search" type="search" class="autocomplete">
              <label class="label-icon" for="search"><i class="material-icons">search</i></label>
              <i class="material-icons">close</i>
            </div>
@@ -77,59 +77,27 @@
        <ul class="slides">
          <li>
            <img src="../resources/images/barco3.jpg">
-           <div class="caption center-align">
-             <h3></h3>
-             <h5 class="light grey-text text-lighten-3"></h5>
-           </div>
          </li>
          <li>
            <img src="../resources/images/barco1.jpg">
-           <div class="caption left-align">
-             <h3></h3>
-             <h5 class="light grey-text text-lighten-3"></h5>
-           </div>
          </li>
          <li>
            <img src="../resources/images/barco2.jpg">
-           <div class="caption right-align">
-             <h3></h3>
-             <h5 class="light grey-text text-lighten-3"></h5>
-           </div>
          </li>
          <li>
            <img src="../resources/images/barco4.jpg">
-           <div class="caption center-align">
-             <h3></h3>
-             <h5 class="light grey-text text-lighten-3"></h5>
-           </div>
          </li>
          <li>
            <img src="../resources/images/barco5.jpg">
-           <div class="caption center-align">
-             <h3></h3>
-             <h5 class="light grey-text text-lighten-3"></h5>
-           </div>
          </li>
          <li>
            <img src="../resources/images/barco6.jpg">
-           <div class="caption center-align">
-             <h3></h3>
-             <h5 class="light grey-text text-lighten-3"></h5>
-           </div>
          </li>
          <li>
            <img src="../resources/images/barco7.jpg">
-           <div class="caption center-align">
-             <h3></h3>
-             <h5 class="light grey-text text-lighten-3"></h5>
-           </div>
          </li>
          <li>
            <img src="../resources/images/barco8.jpg">
-           <div class="caption center-align">
-             <h3></h3>
-             <h5 class="light grey-text text-lighten-3"></h5>
-           </div>
          </li>
        </ul>
      </div>
