--- a/ProyectoFinalCW/templates/IngresoAdmin.html
+++ b/ProyectoFinalCW/templates/IngresoAdmin.html
@@ -2,7 +2,7 @@
  <html>
    <head>
      <meta charset="UTF-8"/>
-     <title>Inicio/Administrador</title>
+     <title>Ingreso/Administrador</title>
      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
      <link type="text/css" rel="stylesheet" href="../resources/materialize/css/materialize.min.css"  media="screen,projection"/>
      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
