--- a/ProyectoFinalCW/templates/perfilAdmin.html
+++ b/ProyectoFinalCW/templates/perfilAdmin.html
@@ -2,7 +2,7 @@
  <html>
    <head>
      <meta charset="UTF-8"/>
-     <title>Registro</title>
+     <title>Perfil de Administrador</title>
      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
      <link type="text/css" rel="stylesheet" href="../resources/materialize/css/materialize.min.css"  media="screen,projection"/>
      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -10,8 +10,8 @@
    <body>
      <!--Barra de navegación-->
      <nav>
-       <div class="nav-wrapper #283593 indigo darken-3">
-         <a href="PInicioUsu.html" class="brand-logo">
+       <div class="nav-wrapper #424242 grey darken-3">
+         <a href="PrincipalAdmin.html" class="brand-logo">
            <center>
              <div>
                <svg width='65' height='65' xmlns='http://www.w3,org/2000/svg' version='1.1' fill='white'>
@@ -51,73 +51,50 @@
               </div>
             </center>
          </a>
-         <ul class="right hide-on-med-and-down">
-           <li>Registro Usuarios</li>
+         <ul id="nav-mobile" class="right hide-on-med-and-down">
+           <li class="active"><i class="material-icons right">person_pin</i></li>
+           <li class="active"><a id="admin" href="perfilAdmin.html"></a></li>
+           <li><a id="cerrar" href="cerrarAdmin.html">Cerrar sesión<i class="material-icons right">input</i></a></li>
          </ul>
        </div>
      </nav>
-     <br/><br/><br/>
-     <!--Formulario-->
-     <div class="row">
-       <form id="formu" class="col s12">
-         <div class="row">
-            <label>Nombre</label>
-		         <div class="input-field col s12">
-		             <i class="material-icons prefix">perm_identity</i>
-		             <input id="Nombre" type="text" maxlength="15" required>
-		             <label for="Nombre">Máximo 15 caracteres.Sin acentos</label>
-		         </div>
-             <div id="valnom">
-             </div>
-             <br/>
-             <label>Fecha de Nacimiento</label>
-		         <div class="input-field col s12">
-		             <i class="material-icons prefix">perm_contact_calendar</i>
-		             <input id="FNacimiento" type="date" required>
-		         </div>
-             <div id="valfnac">
-             </div>
-             <br/>
-             <label>Correo Electrónico</label>
-             <div class="input-field col s12">
-		             <i class="material-icons prefix">email</i>
-		             <input id="Correo" type="text" maxlength="40" required>
-		             <label for="Correo">Únicamente @gmail.com, @comunidad.unam.mx, @hotmail.com, @outlook.com, @outlook.es</label>
-		         </div>
-             <div id="valcorre">
-             </div>
-             <br/>
-             <label>Nombre de usuario</label>
-             <div class="input-field col s12">
-		             <i class="material-icons prefix">account_circle</i>
-		             <input id="Usu" type="text" maxlength="15" required>
-		             <label for="Usu">Mínimo 4,máximo 15 caracteres alfanuméricos (letras, dígitos y @/./+/-/_) solamente.</label>
-		         </div>
-             <div id="valusu">
-             </div>
-             <br/>
-             <label>Contraseña</label>
-             <div class="input-field col s12">
-		             <i class="material-icons prefix">vpn_key</i>
-		             <input id="Cont" type="password" maxlength="15" required>
-		             <label for="Cont">Mínimo de 8 caracteres,debe contener al menos un carácter numérico, uno especial (./_/@), una letra mayúscula y carecer de espacios.</label>
-		         </div>
-             <div id="valcont">
-             </div>
-        </div>
-        <br/><br/>
-        <div align="center">
-          <button class="btn waves-effect waves-light #283593 indigo darken-3" type="submit" name="action">Registrarse
-            <i class="material-icons right">send</i>
-          </button>
-        </div>
-        <br/><br/><br/>
-        <div id="valtodo" align="center">
-        </div>
-      </form>
+     <!--Barra de búsqueda-->
+     <nav>
+       <div class="nav-wrapper #9e9e9e grey">
+         <form>
+           <div class="input-field">
+             <input id="search" type="search" required>
+             <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+             <i class="material-icons">close</i>
+           </div>
+         </form>
+       </div>
+     </nav>
+     <br/><br/>
+     <!--Foto del usuario-->
+     <div class="row  #43a047 green darken-1">
+       <div class="col s4 offset-s1 center">
+         <img class="materialboxed" width="250" height="250" src="../resources/images/admin1.jpg">
+       </div>
+       <div class="col s3 offset-6">
+            <h4 style="color:black;">Administrador:</h4>
+            <h5 style="color:white;">ID de Administrador:</h5>
+            <h5 style="color:white;">Nombre:</h5>
+            <h5 style="color:white;">Correo Electrónico:</h5>
+            <h5 style="color:white;">Fecha de nacimiento:</h5>
+       </div>
+       <div class="col s3 offset-9">
+            <h4 id="admin2" style="color:black;"></h4>
+            <h5 id="id_admin" style="color:white;"></h5>
+            <h5 id="nom" style="color:white;"></h5>
+            <h5 id="correo" style="color:white;"></h5>
+            <h5 id="fnac" style="color:white;"></h5>
+       </div>
      </div>
+     <br/><br/><br/>
+     <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
      <!--Footer-->
-     <footer class="page-footer #283593 indigo darken-3">
+     <footer class="page-footer #424242 grey darken-3">
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
@@ -133,6 +110,6 @@
      <!--Scripts-->
      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
      <script type="text/javascript" src="../resources/materialize/js/materialize.min.js"></script>
-     <script type="text/javascript" src="../programs/registroUsu.js"></script>
+     <script type="text/javascript" src="../programs/perfilAdmin.js"></script>
    </body>
  </html>
