--- a/templates/reportes.html
+++ b/templates/reportes.html
@@ -2,7 +2,7 @@
  <html>
    <head>
      <meta charset="UTF-8"/>
-     <title>Cerrar Sesión</title>
+     <title>Reporte</title>
      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
      <link type="text/css" rel="stylesheet" href="../resources/materialize/css/materialize.min.css"  media="screen,projection"/>
      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -11,7 +11,7 @@
      <!--Barra de navegación-->
      <nav>
        <div class="nav-wrapper #283593 indigo darken-3">
-         <a href="principalUsu.php" class="brand-logo">
+         <a href="PInicioUsu.html" class="brand-logo">
            <center>
              <div>
                <svg width='65' height='65' xmlns='http://www.w3,org/2000/svg' version='1.1' fill='white'>
@@ -51,23 +51,34 @@
               </div>
             </center>
          </a>
-         <ul id="nav-mobile" class="right hide-on-med-and-down">
-           <li class="active"><i class="material-icons right">person_pin</i></li>
-           <li class="active"><a id="usuario" href="perfil.html"></a></li>
-           <li><a href="juego.html">Juego<i class="material-icons right">games</i></a></li>
-           <li><a href="ranking.php">Ranking<i class="material-icons right">grade</i></a></li>
+         <ul class="right hide-on-med-and-down">
+           <li>Reporte de Usuario</li>
          </ul>
        </div>
      </nav>
-     <br/><br/><br/><br/><br/><br/><br/><br/>
-     <!--Mensaje-->
-     <center>
-       <h1>¿Cerrar Sesión?</h1>
-       <br/><br/><br/><br/>
-       <a id="cerrar" class="waves-effect waves-light #283593 indigo darken-3 btn">Si, Salir</a>
-     </center>
-     <br/><br/><br/><br/><br/><br/><br/><br/>
-     <!--Footer-->
+     <br/><br/><br/>
+     <!--Formulario-->
+     <div class="row">
+       <form id="rep" class="col s12">
+         <div class="row">
+            <label>CAUSAS DE REPORTE</label>
+		         <div class="input-field col s12">
+		             <i class="material-icons prefix">announcement</i>
+		             <input id="reporte" type="text" maxlength="500">	  
+					<label for="reporte">500 caracteres maximo</label>
+		         </div>
+             <br/>
+        </div>
+        <br/><br/>
+        <div align="center">
+          <button  id='repo' class="btn waves-effect waves-light #283593 red darken-3" type="submit" name="action">Enviar Reporte<i class="material-icons right">send</i>
+          </button>
+        </div>
+        <br/><br/><br/>
+        <div id="valtodo" align="center">
+        </div>
+      </form>
+     </div><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
      <footer class="page-footer #283593 indigo darken-3">
           <div class="container">
             <div class="row">
@@ -84,6 +95,6 @@
      <!--Scripts-->
      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
      <script type="text/javascript" src="../resources/materialize/js/materialize.min.js"></script>
-     <script type="text/javascript" src="../programs/cerrarUsu.js"></script>
+     <script type="text/javascript" src="../programs/reporte.js"></script>
    </body>
  </html>
