Nombre de red en donde decía Logo

--- a/templates/IngresoAdmin.html
+++ b/templates/IngresoAdmin.html
@@ -11,7 +11,7 @@
      <!--Barra de navegación-->
      <nav>
        <div class="nav-wrapper #424242 grey darken-3">
-         <a href="#!" class="brand-logo center">Logo</a>
+         <a href="#!" class="brand-logo center">CAPOANavalNetwork</a>
        </div>
      </nav>
      <br/><br/><br/><br/><br/><br/>
@@ -42,6 +42,7 @@
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
+                <h6 style="color:white;">CAPOANavalNetwork</h6>
               </div>
             </div>
           </div>
