--- a/templates/PInicioAdmin.html
+++ b/templates/PInicioAdmin.html
@@ -12,7 +12,7 @@
      <!--Barra de navegación-->
      <nav>
        <div class="nav-wrapper #424242 grey darken-3">
-         <a href="#!" class="brand-logo center">Logo</a>
+         <a href="#!" class="brand-logo center">CAPOANavalNetwork</a>
          <ul class="right">
            <li></li>
            <li><a href="SesionAdmin.html">Iniciar Sesión</a></li>
