--- a/templates/PInicioUsu.html
+++ b/templates/PInicioUsu.html
@@ -12,7 +12,7 @@
      <!--Barra de navegación-->
      <nav>
        <div class="nav-wrapper #283593 indigo darken-3">
-         <a href="#!" class="brand-logo center">Logo</a>
+         <a href="#!" class="brand-logo center">CAPOANavalNetwork</a>
          <ul class="right hide-on-med-and-down">
            <li></li>
            <li><a href="SesionUsu.html">Iniciar Sesión</a></li>
@@ -21,7 +21,7 @@
        </div>
      </nav>
      <br/><br/>
-     <h2 class="center-align white-text"><strong>Bienvenid@ a </strong></h2>
+     <h2 class="center-align white-text"><strong>Bienvenid@ a CAPOANavalNetwork</strong></h2>
      <br/><br/><br/>
      <center>
        <div>
