--- a/templates/principalUsu.html
+++ b/templates/principalUsu.html
@@ -118,6 +118,7 @@
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
+                <h6 style="color:white;">CAPOANavalNetwork</h6>
               </div>
             </div>
           </div>
