--- a/templates/SesionAdmin.html
+++ b/templates/SesionAdmin.html
@@ -29,8 +29,8 @@
      <div id="body">
        <!--Barra de navegación-->
        <nav>
-         <div class="nav-wrapper center #424242 grey darken-3">
-           <a href="PInicioAdmin.html" class="brand-logo">Logo</a>
+         <div class="nav-wrapper #424242 grey darken-3">
+           <a href="PInicioAdmin.html" class="brand-logo center">CAPOANavalNetwork</a>
          </div>
        </nav>
        <!--Parallax-->
@@ -115,6 +115,7 @@
             <div class="container">
               <div class="row">
                 <div class="col l6 s12">
+                  <h6 style="color:white;">CAPOANavalNetwork</h6>
                 </div>
               </div>
             </div>
