--- a/templates/reportes.html
+++ b/templates/reportes.html
@@ -64,7 +64,7 @@
             <label>CAUSAS DE REPORTE</label>
 		         <div class="input-field col s12">
 		             <i class="material-icons prefix">announcement</i>
-		             <input id="reporte" type="text" maxlength="500">	  
+		             <input id="reporte" type="text" maxlength="500">
 					<label for="reporte">500 caracteres maximo</label>
 		         </div>
              <br/>
@@ -83,6 +83,7 @@
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
+                <h6 style="color:white;">CAPOANavalNetwork</h6>
               </div>
             </div>
           </div>
