--- a/templates/reportes.html
+++ b/templates/reportes.html
@@ -2,7 +2,7 @@
  <html>
    <head>
      <meta charset="UTF-8"/>
-     <title>Página principal</title>
+     <title>Reporte</title>
      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
      <link type="text/css" rel="stylesheet" href="../resources/materialize/css/materialize.min.css"  media="screen,projection"/>
      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -11,7 +11,7 @@
      <!--Barra de navegación-->
      <nav>
        <div class="nav-wrapper #283593 indigo darken-3">
-         <a href="PrincipalUsu.html" class="brand-logo">
+         <a href="PInicioUsu.html" class="brand-logo">
            <center>
              <div>
                <svg width='65' height='65' xmlns='http://www.w3,org/2000/svg' version='1.1' fill='white'>
@@ -51,69 +51,34 @@
               </div>
             </center>
          </a>
-         <ul id="nav-mobile" class="right hide-on-med-and-down">
-           <li class="active"><i class="material-icons right">person_pin</i></li>
-           <li class="active"><a id="usuario" href="perfil.html"></a></li>
-           <li><a href="juego.html">Juego<i class="material-icons right">games</i></a></li>
-           <li><a href="collapsible.html">Ranking<i class="material-icons right">grade</i></a></li>
-           <li><a id="cerrar" href="cerrarUsu.html">Cerrar sesión<i class="material-icons right">input</i></a></li>
+         <ul class="right hide-on-med-and-down">
+           <li>Reporte de Usuario</li>
          </ul>
        </div>
      </nav>
-     <!--Barra de búsqueda-->
-     <nav>
-       <div class="nav-wrapper #1565c0 blue darken-3">
-         <form>
-           <div class="input-field">
-             <input id="search" type="search" class="autocomplete">
-             <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-             <i class="material-icons">close</i>
-           </div>
-         </form>
-       </div>
-     </nav>
-     <!--Slider-->
-     <div class="slider">
-       <ul class="slides">
-         <li>
-           <img src="../resources/images/barco3.jpg">
-         </li>
-         <li>
-           <img src="../resources/images/barco1.jpg">
-         </li>
-         <li>
-           <img src="../resources/images/barco2.jpg">
-         </li>
-         <li>
-           <img src="../resources/images/barco4.jpg">
-         </li>
-         <li>
-           <img src="../resources/images/barco5.jpg">
-         </li>
-         <li>
-           <img src="../resources/images/barco6.jpg">
-         </li>
-         <li>
-           <img src="../resources/images/barco7.jpg">
-         </li>
-         <li>
-           <img src="../resources/images/barco8.jpg">
-         </li>
-       </ul>
-     </div>
-     <br/><br/>
-     <!--Mensaje Publicaciones-->
+     <br/><br/><br/>
+     <!--Formulario-->
      <div class="row">
-       <div class="col s6 #283593 indigo darken-3 center">
-         <h5 style="color:white;"><i class="material-icons">info_outline</i> Publicaciones</h5>
-       </div>
-     </div>
-     <!--Publicaciones-->
-     <div>
-
-     </div>
-     <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-     <!--Footer-->
+       <form id="rep" class="col s12">
+         <div class="row">
+            <label>CAUSAS DE REPORTE</label>
+		         <div class="input-field col s12">
+		             <i class="material-icons prefix">announcement</i>
+		             <input id="reporte" type="text" maxlength="500">
+					<label for="reporte">500 caracteres maximo</label>
+		         </div>
+             <br/>
+        </div>
+        <br/><br/>
+        <div align="center">
+          <button  id='repo' class="btn waves-effect waves-light #283593 red darken-3" type="submit" name="action">Enviar Reporte<i class="material-icons right">send</i>
+          </button>
+        </div>
+        <br/><br/><br/>
+        <div id="valtodo" align="center">
+        </div>
+      </form>
+     </div><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
      <footer class="page-footer #283593 indigo darken-3">
           <div class="container">
             <div class="row">
@@ -131,6 +96,6 @@
      <!--Scripts-->
      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
      <script type="text/javascript" src="../resources/materialize/js/materialize.min.js"></script>
-     <script type="text/javascript" src="../programs/principalUsu.js"></script>
+     <script type="text/javascript" src="../programs/reporte.js"></script>
    </body>
  </html>
