Listo para insertar juego

--- a/templates/cerrarUsu.html
+++ b/templates/cerrarUsu.html
@@ -11,7 +11,7 @@
      <!--Barra de navegación-->
      <nav>
        <div class="nav-wrapper #283593 indigo darken-3">
-         <a href="principalUsu.php" class="brand-logo">
+         <a href="../programs/principalUsua.php" class="brand-logo">
            <center>
              <div>
                <svg width='65' height='65' xmlns='http://www.w3,org/2000/svg' version='1.1' fill='white'>
