--- a/templates/juego.html
+++ b/templates/juego.html
@@ -12,6 +12,7 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		</head>
 		<body>
+			<div id="yo" style="background-color:white;"></div>
 			<div class="right">
                 <a style="color:white;" href="perfil.html">Regresar a Perfil</a>
 			</div>
@@ -20,10 +21,9 @@
 				<div class='col s3 m3 l2' id='left'>
 					Instrucciones:
 					<ul>
-						<li>°Ingresa el tamaño del barco (solo podras ingresar uno pequeño, dos medianos, uno grande y un extra grande</li><br/>
 						<li>°Selecciona la direccion en la cual se colocara tu barco (en caso de colocarlo en una casilla en la cual salga del area de juego marcara error)</li><br/>
-						<li>°Confirma las posiciones de tus barcos</li><br/>
-						<li>°En el area de mapa del enemigo selecciona la casilla que quieras atacar</li><br/>
+						<li>°Tus barcos se acomodaran en el siguiente orden: chico(2 casillas), dos medianos (3 casillas), grande (4 casillas), extragrande (5 casilals)</li><br/>
+						<li>°Ya que hayas colocado tus 5 barcos, en el area de mapa del enemigo selecciona la casilla que quieras atacar</li><br/>
 						<li>°El juego terminara cuando un jugador destruya todas las naves del contrincante</li>
 					</ul>
 				</div>
