Publicaciones en perfil
Publicaciones en perfil

--- a/templates/cerrarUsu.html
+++ b/templates/cerrarUsu.html
@@ -53,7 +53,7 @@
          </a>
          <ul id="nav-mobile" class="right hide-on-med-and-down">
            <li class="active"><i class="material-icons right">person_pin</i></li>
-           <li class="active"><a id="usuario" href="perfil.html"></a></li>
+           <li class="active"><a id="usuario" href="../programs/perfil.php"></a></li>
            <li><a href="juego.html">Juego<i class="material-icons right">games</i></a></li>
            <li><a href="ranking.php">Ranking<i class="material-icons right">grade</i></a></li>
          </ul>
