--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -2,7 +2,7 @@
  <html>
    <head>
      <meta charset="UTF-8"/>
-     <title>Página principal</title>
+     <title>Perfil de Usuario</title>
      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
      <link type="text/css" rel="stylesheet" href="../resources/materialize/css/materialize.min.css"  media="screen,projection"/>
      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -11,7 +11,7 @@
      <!--Barra de navegación-->
      <nav>
        <div class="nav-wrapper #283593 indigo darken-3">
-         <a href="principalUsua.php" class="brand-logo">
+         <a href="../programs/principalUsua.php" class="brand-logo">
            <center>
              <div>
                <svg width='65' height='65' xmlns='http://www.w3,org/2000/svg' version='1.1' fill='white'>
@@ -53,10 +53,10 @@
          </a>
          <ul id="nav-mobile" class="right hide-on-med-and-down">
            <li class="active"><i class="material-icons right">person_pin</i></li>
-           <li class="active"><a id="usuario" href="perfil.php"></a></li>
-           <li><a href="../templates/juego.html">Juego<i class="material-icons right">games</i></a></li>
-           <li><a href="../templates/ranking.php">Ranking<i class="material-icons right">grade</i></a></li>
-           <li><a id="cerrar" href="../templates/cerrarUsu.html">Cerrar sesión<i class="material-icons right">input</i></a></li>
+           <li class="active"><a id="usuario" href="perfil.html"></a></li>
+           <li><a href="juego.html">Juego<i class="material-icons right">games</i></a></li>
+           <li><a href="ranking.php">Ranking<i class="material-icons right">grade</i></a></li>
+           <li><a id="cerrar" href="cerrarUsu.html">Cerrar sesión<i class="material-icons right">input</i></a></li>
          </ul>
        </div>
      </nav>
@@ -65,43 +65,35 @@
        <div class="nav-wrapper #1565c0 blue darken-3">
          <form>
            <div class="input-field">
-             <input id="search" type="search" class="autocomplete">
+             <input id="search" type="search" required>
              <label class="label-icon" for="search"><i class="material-icons">search</i></label>
              <i class="material-icons">close</i>
            </div>
          </form>
        </div>
      </nav>
-     <!--Slider-->
-     <div class="slider">
-       <ul class="slides">
-         <li>
-           <img src="../resources/images/barco3.jpg">
-         </li>
-         <li>
-           <img src="../resources/images/barco1.jpg">
-         </li>
-         <li>
-           <img src="../resources/images/barco2.jpg">
-         </li>
-         <li>
-           <img src="../resources/images/barco4.jpg">
-         </li>
-         <li>
-           <img src="../resources/images/barco5.jpg">
-         </li>
-         <li>
-           <img src="../resources/images/barco6.jpg">
-         </li>
-         <li>
-           <img src="../resources/images/barco7.jpg">
-         </li>
-         <li>
-           <img src="../resources/images/barco8.jpg">
-         </li>
-       </ul>
-     </div>
      <br/><br/>
+     <!--Foto del usuario-->
+     <div class="row  #1b5e20 green darken-4">
+       <div class="col s4 offset-s1 center">
+         <img class="materialboxed" width="250" height="250" src="../resources/images/usuario.jpg">
+       </div>
+       <div class="col s3 offset-6">
+            <h4 style="color:skyblue;">Usuario:</h4>
+            <h5 style="color:white;">ID de Usuario:</h5>
+            <h5 style="color:white;">Nombre:</h5>
+            <h5 style="color:white;">Correo Electrónico:</h5>
+            <h5 style="color:white;">Fecha de nacimiento:</h5>
+       </div>
+       <div class="col s3 offset-9">
+            <h4 id="usu" style="color:skyblue;"></h4>
+            <h5 id="id_usu" style="color:white;"></h5>
+            <h5 id="nom" style="color:white;"></h5>
+            <h5 id="correo" style="color:white;"></h5>
+            <h5 id="fnac" style="color:white;"></h5>
+       </div>
+     </div>
+     <br/><br/><br/>
      <!--Mensaje Publicaciones-->
      <div class="row">
        <div class="col s6 #283593 indigo darken-3 center">
@@ -167,6 +159,7 @@
      </div>
      </div>
      <br/><br/><br/><br/><br/><br/><br/>
+     <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
      <!--Footer-->
      <footer class="page-footer #283593 indigo darken-3">
           <div class="container">
@@ -185,6 +178,6 @@
      <!--Scripts-->
      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
      <script type="text/javascript" src="../resources/materialize/js/materialize.min.js"></script>
-     <script type="text/javascript" src="../programs/principalUsu.js"></script>
+     <script type="text/javascript" src="../programs/perfilUsu.js"></script>
    </body>
  </html>
