--- a/templates/principalAdmin.html
+++ b/templates/principalAdmin.html
@@ -58,18 +58,6 @@
          </ul>
        </div>
      </nav>
-     <!--Barra de búsqueda-->
-     <nav>
-       <div class="nav-wrapper #9e9e9e grey">
-         <form>
-           <div class="input-field">
-             <input id="search" type="search" class="autocomplete">
-             <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-             <i class="material-icons">close</i>
-           </div>
-         </form>
-       </div>
-     </nav>
      <!--Slider-->
      <div class="slider">
        <ul class="slides">
@@ -100,6 +88,12 @@
        </ul>
      </div>
      <br/><br/>
+     <!--Mensaje Reportes-->
+     <div class="row">
+       <div class="col s6 #e53935 red darken-1 center">
+         <h5 style="color:white;"><i class="material-icons">report_problem</i> Reportes</h5>
+       </div>
+     </div>
      <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
      <!--Footer-->
      <footer class="page-footer #424242 grey darken-3">
